# NSE4-Libraries

./: README.md
python/: pyproject.toml
python/mcom/: README.md  pyproject.toml
python/mcom/src/mcom/: __init__.py  client.py  connection_handler.py  exceptions.py  protocol.py  server.py
python/unet/: README.md  pyproject.toml
python/unet/src/unet/: __init__.py  client.py  command.py  command_handler.py  command_orchestrator.py  command_parser.py  database.py  encryption.py  protocol.py  server.py  singleton.py
